--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web application to find a technician near your zone to repair your broken devices. Also you can register as a technician to offer your job and time.",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon index.html",
+    "start": "nodemon index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -18,6 +18,7 @@
   "author": "Joaquin Jimenez Garcia",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
