--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.1",
+    "moment": "^2.21.0",
     "mongoose": "^5.0.10",
     "nodemon": "^1.17.1"
   }
