--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "connect-multiparty": "^2.1.0",
     "express": "^4.16.3",
     "jwt-simple": "^0.5.1",
     "moment": "^2.21.0",
