--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "body-parser": "^1.18.2",
     "connect-multiparty": "^2.1.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
     "jwt-simple": "^0.5.1",
     "moment": "^2.21.0",
     "mongoose": "^5.0.10",
-    "nodemon": "^1.17.1"
+    "nodemon": "^1.17.1",
+    "path": "^0.12.7"
   }
 }
